# AgentShield

./: .gitguardian.yaml  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
benchmarks/: latency_bench.py  owasp_coverage.py
configuration/: index.html
docs/: configuration.md  getting-started.md  index.md  owasp-mapping.md  rules-reference.md
examples/: crewai_example.py  full_config_example.yaml  langchain_example.py  mcp_example.py  openai_example.py  quickstart.py
getting-started/: index.html
owasp-mapping/: index.html
rules-reference/: index.html
scripts/: generate_assets.py  record_demo.py
search/: search_index.json
src/agentshield/: __init__.py  __main__.py  cli.py
src/agentshield/adapters/: __init__.py  crewai.py  generic.py  langchain.py  mcp.py  openai_sdk.py
src/agentshield/audit/: __init__.py  exporters.py  logger.py  verifier.py
src/agentshield/core/: config.py  context.py  engine.py  exceptions.py  result.py  shield.py
src/agentshield/dashboard/: __init__.py  app.py  routes.py
src/agentshield/dashboard/frontend/: index.html
src/agentshield/hitl/: __init__.py  discord.py  gateway.py  slack.py  terminal.py
src/agentshield/rules/: __init__.py  approval.py  base.py  cost_guard.py  credential_leak.py  custom.py  filesystem.py  network.py  prompt_injection.py  rate_limiter.py  scope.py  shell_command.py  sql_injection.py
tests/: conftest.py  test_audit.py  test_cli.py  test_config.py  test_custom_rules.py  test_dashboard.py  test_engine.py  test_exporters.py  test_hitl.py  test_shield.py  test_shield_extended.py
tests/test_adapters/: test_adapters_mock.py  test_generic.py
tests/test_rules/: test_approval.py  test_cost_guard.py  test_credential_leak.py  test_filesystem.py  test_network.py  test_prompt_injection.py  test_rate_limiter.py  test_scope.py  test_shell_command.py  test_sql_injection.py
