[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentshield-fw"
version = "0.1.0"
description = "The runtime firewall for AI agents. Protect any agent in 3 lines of code."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Avinash Amudala", email = "avinashamudala@gmail.com" }]
keywords = ["ai", "agents", "security", "safety", "firewall", "mcp", "langchain", "owasp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
config = ["pyyaml>=6.0"]
dashboard = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "jinja2>=3.1.0", "starlette>=0.40.0,<1.0.0"]
hitl = ["httpx>=0.27.0"]
langchain = ["langchain-core>=0.3.0"]
crewai = ["crewai>=0.80.0"]
mcp = ["mcp>=1.0.0"]
openai = ["openai>=1.50.0"]
otel = ["opentelemetry-sdk>=1.25.0", "opentelemetry-exporter-otlp>=1.25.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.10",
    "ruff>=0.5.0",
    "pyyaml>=6.0",
]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]
all = ["agentshield-fw[config,dashboard,hitl,langchain,crewai,mcp,openai,otel]"]

[project.urls]
Homepage = "https://github.com/Avinash-Amudala/AgentShield"
Documentation = "https://avinash-amudala.github.io/AgentShield/"
Repository = "https://github.com/Avinash-Amudala/AgentShield"
Issues = "https://github.com/Avinash-Amudala/AgentShield/issues"
Changelog = "https://github.com/Avinash-Amudala/AgentShield/blob/main/CHANGELOG.md"

[project.scripts]
agentshield = "agentshield.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentshield"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
